fix dark mode bg color and font color

--- a/source/css/patch.styl
+++ b/source/css/patch.styl
@@ -2,7 +2,25 @@ dark-primary-color = var(--dark-primary-color)
 dark-primary-color-hover = var(--dark-primary-color-hover)
 dark-primary-color-active = var(--dark-primary-color-active)
 dark-font-color = var(--dark-font-color)
-dark-body-bg-color = var(--dark-body-bg-color)
+dark-body-bg = var(--dark-body-bg)
+
+VariablePair(name, val)
+  {unquote('--' + name)}: val
+
+:root
+    VariablePair('dark-primary-color', #373d48)
+    VariablePair('dark-primary-color-hover', #282c34cc)
+    VariablePair('dark-primary-color-active', #2c313a)
+    VariablePair('dark-font-color', #e2e2e2)
+    VariablePair('dark-body-bg', #2f4766)
+    VariablePair('dark-header-bg-color', #000000a0)
+    VariablePair('dark-content-card-bg-color', #282c3495)
+    VariablePair('dark-content-card-hover-color', #282c34cc)
+
+    VariablePair('light-body-bg', #ac3c4424)
+
+body:not(.night) 
+    background: var(--light-body-bg);
 
 
 // 粘性頂欄以及固定高度
@@ -33,7 +51,7 @@ dark-body-bg-color = var(--dark-body-bg-color)
         display: none
 
 night()
-    background: dark-body-bg-color
+    background: dark-body-bg
 
     // code highlight (https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-dark.min.css)
     .hljs{display:block;overflow-x:auto;padding:0.5em;color:#abb2bf;background:#282c34}.hljs-comment,.hljs-quote{color:#5c6370;font-style:italic}.hljs-doctag,.hljs-keyword,.hljs-formula{color:#c678dd}.hljs-section,.hljs-name,.hljs-selector-tag,.hljs-deletion,.hljs-subst{color:#e06c75}.hljs-literal{color:#56b6c2}.hljs-string,.hljs-regexp,.hljs-addition,.hljs-attribute,.hljs-meta-string{color:#98c379}.hljs-built_in,.hljs-class .hljs-title{color:#e6c07b}.hljs-attr,.hljs-variable,.hljs-template-variable,.hljs-type,.hljs-selector-class,.hljs-selector-attr,.hljs-selector-pseudo,.hljs-number{color:#d19a66}.hljs-symbol,.hljs-bullet,.hljs-link,.hljs-meta,.hljs-selector-id,.hljs-title{color:#61aeee}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:bold}.hljs-link{text-decoration:underline}
@@ -282,19 +300,6 @@ night()
 
 body.night
     night()
-
-VariablePair(name, val)
-  {unquote('--' + name)}: val
-
-:root
-    VariablePair('dark-primary-color', #373d48)
-    VariablePair('dark-primary-color-hover', rgb(67, 74, 86))
-    VariablePair('dark-primary-color-active', rgb(44, 49, 58))
-    VariablePair('dark-font-color', #c0c0c0)
-    VariablePair('dark-body-bg-color', #0e1225)
-    VariablePair('dark-header-bg-color', rgb(34, 36, 56))
-    VariablePair('dark-content-card-bg-color', #282c3480)
-    VariablePair('dark-content-card-hover-color', #282c34cc)
 
 @media (prefers-color-scheme: dark)
     body:not(.light)
